# ZcAILib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
_pkg_test/ZcAILib/lib/: ZcAiLib.lib
example/: mainwindow.cpp
src/: aiprovider.cpp
